// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageRendererV2 should handle complex markdown with code blocks and inline code 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span>
        
      # Heading 1
      ## Heading 2
      
      This is a **bold** and *italic* text with \`inline code\`.
      
      \`\`\`python
      def hello_world():
          print("Hello, World!")
      \`\`\`
      
      - List item 1
      - List item 2
        - Nested item
      
      &gt; Blockquote
      
      | Table | Header |
      |-------|---------|
      | Cell  | Cell    |
    
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should handle complex mathematical formulas correctly 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\int_{0}^{\\infty} e^{-x^2} dx = \\frac{\\sqrt{\\pi}}{2}
          </div>
        </div>
      </div>
      <span>
        "&gt;&lt;/mathpix&gt;
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should handle markdown with links and images 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\text{Image processing formula: } \\mathcal{F}\\{f(x,y)\\}
          </div>
        </div>
      </div>
      <span>
        
    "&gt;&lt;/mathpix&gt;
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should handle mixed content with complex markdown and math formulas 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            x = \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}
          </div>
        </div>
      </div>
      <span>
        
      
      ## Code Example
      \`\`\`python
      def quadratic_formula(a, b, c):
          discriminant = b**2 - 4*a*c
          return (-b + math.sqrt(discriminant))/(2*a)
      \`\`\`
      
      ### Important Notes
      - The **discriminant** determines the nature of the roots
      - When discriminant &gt; 0: Two real roots
      - When discriminant = 0: One real root
      
      The integral of e^x is:
      
      </span>
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\int e^x dx = e^x + C
          </div>
        </div>
      </div>
      <span>
        
      
      &gt; Note: C is the constant of integration
    "&gt;&lt;/mathpix&gt;
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should handle multiple mathpix formulas in sequence 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}
          </div>
        </div>
      </div>
      <span>
        
      
      </span>
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\sum_{i=1}^n i = \\frac{n(n+1)}{2}
          </div>
        </div>
      </div>
      <span>
        
      
      </span>
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\lim_{x \\to \\infty} \\frac{1}{x} = 0
          </div>
        </div>
      </div>
      <span>
        
    "&gt;&lt;/mathpix&gt;
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should handle special characters in mathpix content 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            \\alpha + \\beta = \\gamma \\pm \\delta
          </div>
        </div>
      </div>
      <span>
        "&gt;&lt;/mathpix&gt;
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should match snapshot for markdown content 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span>
        Hello **world** with some *italic* and \`code\`
      </span>
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should match snapshot for mathpix content 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span />
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            E = mc^2
          </div>
        </div>
      </div>
      <span />
    </div>
  </article>
</div>
`;

exports[`MessageRendererV2 should match snapshot for mixed content 1`] = `
<div>
  <article
    class="message-renderer"
  >
    <div
      data-testid="markdown-content"
    >
      <span>
        Hello **world** 
      </span>
      <div>
        <div>
          <div
            data-testid="mathpix-content"
          >
            E = mc^2
          </div>
        </div>
      </div>
      <span>
         and some more text
      </span>
    </div>
  </article>
</div>
`;
